index.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

:root {
  font-size: 16px;
  font-family: 'Sweet Sans Pro';
  scroll-behavior: smooth;
  --main-red: #BB2E2A;
  --main-light-gray: #CECECE;
  --menu-gray: #24292E;
  --main-font: 'Sweet Sans Pro';
}

::-webkit-scrollbar {
  display: none;
}

/*Nav Bar*/

nav {
  position: fixed;
  top: 3vw;
  width: 97.25%;
  padding-right: 2vw;
  height: fit-content;
  display: flex;
  justify-content: space-between;
  align-items: center;
  z-index: 5;
  transition: transform 0.75s;
}

nav img {
  margin-left: 3vw;
  max-width: 17.5vw;
}

nav ul {
  display: flex;
  height: fit-content;
}

nav a {
  width: fit-content;
  height: fit-content;
  display: flex;
  padding: 0.25vw 1vw;
  list-style: none;
  text-decoration: none;
  color: white;
  font-family: 'Sweet Sans Pro';
  font-weight: 500;
  font-size: 1vw;
}

a[href='#eventos'] {
  color: black;
  background-color: white;
}

nav a:hover {
  color: #BB2E2A;
}

.hide-bar {
  transform: translateY(-12.5vh);
}

/*City Menu Button*/
.menu-button {
  position: fixed;
  top: 25vh;
  right: 0;
  display: flex;
  align-items: center;
  height: fit-content;
  padding: 0.75vw 0.75vw;
  border-top-left-radius: 0.5vw;
  border-bottom-left-radius: 0.5vw;
  writing-mode: vertical-rl;
  background-color: rgba(255, 255, 255, 0.9);
  font-family: 'Sweet Sans Pro';
  font-weight: 500;
  font-size: 1vw;
  transition: transform 0.5s;
}

.menu-button p {
  text-align: center;
  height: 14vw;
  margin-top: 0.25vw;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.menu-button:hover {
  cursor: pointer;
}

.menu-button:hover i{
  animation: sideToSide 1s ease-in-out infinite;
}

/*Cities Menu*/

#menu {
  position: fixed;
  top: 0;
  right: -100vw;
  width: 100vw;
  height: 100vh;
  z-index: 6;
  display: flex;
  transition: transform 0.5s;
}

.side-bar {
  display: inline-flex;
  flex-flow: column;
  align-items: center;
  background-color: black;
  width: 30vw;
  height: 100vh;
  color: white;
  font-family: 'Sweet Sans Pro';
  font-weight: 500;
  z-index: 6;
}

.side-bar > img {
  max-width: 50%;
  margin: 10% 20% 10% 0;
}

div.city-selectors {
  width: 100%;
}

.city-selectors > p {
  background-color: black;
  font-size: 1.2vw;
  width: 100%;
  padding: 1% 0 1% 15%;
  transition: padding 0.5s, margin 0.5s;
}

.city-selectors > p:hover {
  background-color: #24292E;
  cursor: pointer;
}

.city-selectors > p[data='1'] {
  background-color: #24292E;
  padding: 2.5% 0 2.5% 15%;
  margin: 2% 0;
  transition: padding 0.5s, margin 0.5s;
}

#icons-container {
  display: flex;
  align-items: flex-end;
  width: 100%;
  height: 72.5%;
  padding: 2vw;
}

img.icon {
  max-width: 1.5vw !important;
  max-height: 1.5vw !important;
  margin-right: 0.5vw;

}

.cities {
  width: 70vw;
  height: 100vw;
  background-color: #24292E;
}

.cities div.close-button-container {
  display: flex;
  justify-content: end;
  padding: 1.5vw 2.5vw;
  width: 100%;
}

.cities i {
  color: white;
  font-size: 2vw;
}

.cities i:hover {
  cursor: pointer;
  transform: scale(1.1);
  transition: transform 0.25s;
}

.cities div[data='0'] {
  display: none;
}

.cities div[data='1'] {
  display: flex;
  justify-content: space-around;
  padding: 1vw 7.5vw;
  color: white;
  font-family: 'Sweet Sans Pro';
  width: 100%;
  height: 100%;
  animation: fadeIn 1s ease-in-out;
}

.cities div[data='1'] h2 {
  font-weight: 500;
  font-size: 1.1vw;
  margin-bottom: 1.5vw;
}

.cities div[data='1'] p {
  font-weight: lighter;
  font-size: 0.9vw;
}

.cities div[data='1'] p:hover {
  cursor: pointer;
  color: #BB2E2A;
}

.show-menu {
  transform: translateX(-100vw);
}

/*Main Body*/

main {
width: 100vw;
}

/*Inicio (Dropdown Form)*/

#inicio {
  background: url('./images/Imagen\ Header.png') no-repeat center;
  background-size: 100%;
  width: 100%;
  aspect-ratio: 381/214;
  display: flex;
  justify-content: center;
  align-items: center;
}

.form {
  display: inline-flex;
  flex-direction: row;
  align-items: center;
  margin-top: 25vw;
}

.select {
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(255, 255, 255, 0.85);
  padding: 1.2vw 0;
  text-align: center;
  font-size: 1vw;
  width: 10vw;
}

.select-divider {
  width: 0.5px;
  height: 7.5vw;
  background-color: white;
}

.select:hover {
  cursor: pointer;
}

.select-container[data='1'] .select i{
  transform: rotate(180deg);
  transition: transform 0.5s;
}

.select i{
  font-size: vw;
  transition: transform 0.5s;
  pointer-events: none;
}

.select p {
  margin-right: 1vw;
  pointer-events: none;
}

.option {
  width: 10vw;
  padding: 0.25vw;
  list-style: none;
  text-align: center;
  background-color: rgba(255, 255, 255, 0.85);
  font-size: 0.8vw;
}

.option:hover {
  color: white;
  background-color: #BB2E2A;
  cursor: pointer;
}

.options-container{
  position: absolute;
  overflow: hidden;
}

.form input{
  border: none;
  background-color: #BB2E2A;
  font-family: 'Sweet Sans Pro';
  font-size: 1vw;
  padding: 1.2vw 0;
  width: 10vw;
  color: white;
}

.form input:hover {
  cursor: pointer;
}

.select-container[data='0'] .options{
  transform: translateY(-100%);
  transition: transform 0.5s;
}

.select-container[data='0'] .option{
  pointer-events: none;
}

.select-container[data='1'] .options-container{
  visibility: visible;
}

.select-container[data='1'] .options{
  animation: slideIn 0.5s ease-in;
}

/*Nosotros*/

#nosotros {
  padding: 5vw 2vw;
  display: inline-flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  color: white;
  background-color: black;
  text-align: justify;
  text-align-last: center;
}

#nosotros h1 {
  font-size: 1.75vw;
  margin-bottom: 3vw;
  opacity: 0;
  transition: opacity 0.5s;
}

#nosotros p {
  font-size: 1vw;
  width: 40%;
  margin-bottom: 1vw;
  font-weight: lighter;
  opacity: 0;
  transition: opacity 2s;
}

.show-about {
  opacity: 1 !important;
}

/*Galería*/
#galeria {
  display: flex;
  justify-content: center;
  width: 100%;
  margin-bottom: 3vw;
}

div.gray-background {
  background-color: var(--main-light-gray);
  width: 90%;
  display: inline-flex;
  flex-direction: column;
  align-items: center;
  padding: 3.5vw 0 3vw 0;
}

/*Gallery images*/
.gallery-container {
  display: inline-flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  margin-bottom: 3vw;
}

.controller-icons {
  position: absolute;
  display: flex;
  justify-content: space-between;
  font-size: 1.25vw;
  color: white;
  z-index: 4;
  width: 30vw;
}

.controller-icons i {
  display: flex;
  align-items: center;
  padding: 0 2vw;
  height: 30vw;
}

.controller-icons i:hover {
  background-color: rgba(255, 255, 255, 0.25);
  transition: background-color 0.3s;
  cursor: pointer;
}

.gallery-container .img-container {
  display: flex;
  justify-content: center;
  width: 100%;
  height: 30vw
}

.img-container img {
  position: absolute;
  width: 30vw;
  transition: 1s;
}

.gallery-container[data = '0'] .img-container img {
  transform: translate(0);
}

.gallery-container[data = '0'] .img-container img[data-order='0'] {
  z-index: 1;
}

.gallery-container[data = '0'] .img-container img[data-order='1'] {
  z-index: 2;
}

.gallery-container[data = '0'] .img-container img[data-order='2'] {
  z-index: 3;
}

.gallery-container[data = '0'] .img-container img[data-order='3'] {
  z-index: 2;
}

.gallery-container[data = '0'] .img-container img[data-order='4'] {
  z-index: 1;
}

.gallery-container[data = '1'] .img-container img[data-order='0'] {
  transform: translateX(-60%) scale(0.95);
  z-index: 1;
}

.gallery-container[data = '1'] .img-container img[data-order='1'] {
  transform: translateX(-30%) scale(0.975);
  z-index: 2;
}

.gallery-container[data = '1'] .img-container img[data-order='2'] {
  z-index: 3;
}

.gallery-container[data = '1'] .img-container img[data-order='3'] {
  transform: translateX(30%) scale(0.975);
  z-index: 2;
}

.gallery-container[data = '1'] .img-container img[data-order='4'] {
  transform: translateX(60%) scale(0.95);
  z-index: 1;
}

/*Other gallery elements*/
.gray-background span {
  font-size: 1vw;
  font-weight: bold;
  font-style: italic;
  text-align: justify;
  text-align-last: center;
  padding: 0 25%;
  margin-bottom: 2.5vw;
}

.gray-background input {
  font-family: var(--main-font);
  font-weight: 400;
  font-size: 1vw;
  padding: 1vw 2vw;
  color: white;
  background-color: black;
  border: none;
}

.gray-background input:hover {
  cursor: pointer;
  background-color: var(--main-red);

}

/*Sucursales*/

.sucursales {
  display: inline-flex;
  flex-direction: column;
  align-items: center;
  border:2px solid var(--main-red);
  width: 106%;
  margin-top: 5vw;
  padding: 0 15vw 7.5vw 15vw;
}

.sucursales h2 {
  text-align: start;
  width: 100%;
  color: var(--main-red);
  font-size: 2.5vw;
  padding: 2vw 0;
}

.sucursales-container {
  display: flex;
  width: 100%;
  justify-content: space-between;
}

.sucursal-container {
  width: 30vw;
  display: inline-flex;
  flex-direction: column;
}

.sucursal-container img {
  width: 100%;
}

.sucursal-container .info-sucursal {
  background-color: white;
  padding: 1.75vw;
}

.sucursal-container h3 {
  font-size: 1.5vw;
}

.sucursal-container p {
  margin-top: 0.5vw;
  font-family: 'Sweet Sans Pro';
  font-size: 0.9vw;
  font-weight: 300;
}

.sucursales input {
  width: 100%;
  color: var(--main-light-gray);
  background-color: var(--main-red);
  border: none;
  border-bottom-left-radius: 1.5vw;
  text-align: start;
}

.sucursales input:hover {
  outline: 2px solid var(--main-red);
  background-color: white;
  color: var(--main-red);
}

/*Gray divider*/

.gray-divider {
  display: flex;
  justify-content: center;
  height: 2vw;
  overflow: hidden;
  margin-bottom: 0.5vw;
}

/*Blog*/
#blog {
  display: flex;
  justify-content: center;
}


/*Blog Gallery*/
.img-slider {
  display: inline-flex;
  justify-content: center;
  width: 100vw;
  height: 25vw;
}

.img-slide {
  display: flex;
  position: absolute;
  will-change: transform;
}

.img-slide[data-order = '0'] {
  transform: translateX(100%);
  transition: 0s;
}

.img-slide[data-order = '1'] {
  transform: translateX(0);
  transition: 20s linear;
}

.img-slide[data-order = '2'] {
  transform: translateX(-100%);
  transition: 20s linear;
}

.img-slide img{
  width: 25vw;
  aspect-ratio: 1/1;
  margin-right: 3vw;
}

/*Animations*/

@keyframes fadeIn {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes sideToSide {
  0% {
    transform: translateX(0);
  }
  50% {
    transform: translateX(-25%);
  }
  100% {
    transform: translateX(0);
  }
}

@keyframes slideIn {
  0% {
    transform: translateY(-100%);
  }

  100% {
    transform: translateY(0);
  }
}

